Update and rename index11.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Images Masterclass</title>
-    <link rel="stylesheet" href="index12.css">
+    <link rel="stylesheet" href="stylee.css">
 </head>
 <body>
     <header class="hero">
@@ -43,4 +43,5 @@
     </footer>
     </main>
 </body>
+
 </html>
